force-app/main/default/objects/Log_CTI_Valdo__c/Log_CTI_Valdo__c.object-meta.xml
<CustomObject>
    <label>Log CTI Valdo</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log CTI Valdo</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>