force-app/main/default/objects/Log_CTI_Valdo__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for filter custom</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Log_CTI_Valdo</relationshipName>
    <type>Lookup</type>
</CustomField>