force-app/main/default/objects/Log_CTI_Valdo__c/fields/Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Call_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Line</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Log CTI Valdo</relationshipLabel>
    <relationshipName>Log_CTI_Valdo</relationshipName>
    <type>Lookup</type>
</CustomField>