force-app/main/default/objects/Log_CTI_Valdo__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Log CTI Valdo</relationshipLabel>
    <relationshipName>Log_CTI_Valdo</relationshipName>
    <type>Lookup</type>
</CustomField>