force-app/main/default/objects/Log_CTI_Valdo__c/fields/CheckRecording__c.field-meta.xml
<CustomField>
    <fullName>CheckRecording__c</fullName>
    <formula>CONTAINS(Recording_File__c, Current_Phone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckRecording</label>
    <type>Checkbox</type>
</CustomField>