force-app/main/default/objects/Log_CTI_Valdo__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Log CTI Valdo</relationshipLabel>
    <relationshipName>Log_CTI_Valdo</relationshipName>
    <type>Lookup</type>
</CustomField>