force-app/main/default/objects/Log_CTI_Valdo__c/fields/Count_Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Count_Outbound_Call__c</fullName>
    <formula>IF(  ISBLANK( Error_API__c ) &amp;&amp; TEXT( Status__c )== &apos;Outbound&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Outbound Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>