force-app/main/default/objects/Log_CTI_Valdo__c/fields/Current_Phone_4__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone_4__c</fullName>
    <label>Current Phone 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>