force-app/main/default/objects/Log_CTI_Valdo__c/fields/Current_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone__c</fullName>
    <label>Current Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>