force-app/main/default/objects/Log_CTI_Valdo__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <formula>IF (ISBLANK(Contact__c),FALSE,
 !CONTAINS(Contact__r.Account.Name,&quot;Non&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ?</label>
    <type>Checkbox</type>
</CustomField>