force-app/main/default/objects/Log_CTI_Valdo__c/fields/Datetime_compare__c.field-meta.xml
<CustomField>
    <fullName>Datetime_compare__c</fullName>
    <formula>&apos;Created Date : &apos;+TEXT( CreatedDate +(7/24 )) +  BR() +&apos;Start Dial : &apos;+TEXT( Start_Dialling__c+(7/24 ) )+  BR() +&apos;Start Call : &apos;+TEXT( Start_Calling__c+(7/24 ) )+  BR() +&apos;End Call : &apos;+TEXT( End_Calling__c+(7/24 ) )</formula>
    <label>Datetime compare</label>
    <type>Text</type>
</CustomField>