force-app/main/default/objects/Log_CTI_Valdo__c/fields/Datetime_End_Call__c.field-meta.xml
<CustomField>
    <fullName>Datetime_End_Call__c</fullName>
    <formula>IF( ISBLANK(End_Calling__c),&apos;&apos;,  SUBSTITUTE(TEXT( End_Calling__c+(7/24 ) ),&apos;Z&apos;,&apos;&apos;))</formula>
    <label>Datetime End Call</label>
    <type>Text</type>
</CustomField>