force-app/main/default/objects/Log_CTI_Valdo__c/fields/Datetime_Start_Call__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Start_Call__c</fullName>
    <formula>IF( ISBLANK(Start_Calling__c) , &apos;&apos; ,  SUBSTITUTE(TEXT(Start_Calling__c+(7/24 )), &apos;Z&apos;, &apos;&apos;))</formula>
    <label>Datetime Start Call</label>
    <type>Text</type>
</CustomField>