force-app/main/default/objects/Log_CTI_Valdo__c/fields/Datetime_Start_Dial__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Start_Dial__c</fullName>
    <formula>IF( ISBLANK(Start_Dialling__c),&apos;&apos;,  SUBSTITUTE(TEXT( Start_Dialling__c+(7/24 ) ), &apos;Z&apos;, &apos;&apos;)  )</formula>
    <label>Datetime Start Dial</label>
    <type>Text</type>
</CustomField>