force-app/main/default/objects/Log_CTI_Valdo__c/fields/Duration_Call__c.field-meta.xml
<CustomField>
    <fullName>Duration_Call__c</fullName>
    <label>Duration Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>