force-app/main/default/objects/Log_CTI_Valdo__c/fields/Duration_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Duration_Call_Time__c</fullName>
    <formula>IF(Duration_Call__c/3600 &lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT(FLOOR(Duration_Call__c/3600)) + &quot;:&quot; + IF(FLOOR(MOD(Duration_Call__c,3600)/60)&lt; 10, &apos;0&apos;,&apos;&apos;)+TEXT( FLOOR(MOD(Duration_Call__c,3600)/60)) + &quot;:&quot; +  IF(MOD(MOD(Duration_Call__c,3600),60)&lt; 10, &apos;0&apos;,&apos;&apos;)+ TEXT(MOD(MOD(Duration_Call__c,3600),60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Call</label>
    <type>Text</type>
</CustomField>