force-app/main/default/objects/Log_CTI_Valdo__c/fields/Duration_Dialing__c.field-meta.xml
<CustomField>
    <fullName>Duration_Dialing__c</fullName>
    <label>Duration Dialing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>