force-app/main/default/objects/Log_CTI_Valdo__c/fields/Duration_Previous_Call__c.field-meta.xml
<CustomField>
    <fullName>Duration_Previous_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duration Previous Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>