force-app/main/default/objects/Log_CTI_Valdo__c/fields/End_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Call_Date__c</fullName>
    <formula>DATEVALUE( End_Calling__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Call Date</label>
    <type>Date</type>
</CustomField>