force-app/main/default/objects/Log_CTI_Valdo__c/fields/End_Calling__c.field-meta.xml
<CustomField>
    <fullName>End_Calling__c</fullName>
    <label>End Calling</label>
    <type>DateTime</type>
</CustomField>