force-app/main/default/objects/Log_CTI_Valdo__c/fields/Error_API__c.field-meta.xml
<CustomField>
    <fullName>Error_API__c</fullName>
    <label>Error API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>