force-app/main/default/objects/Log_CTI_Valdo__c/fields/Exec_Manual__c.field-meta.xml
<CustomField>
    <fullName>Exec_Manual__c</fullName>
    <description>Manual Exec date.</description>
    <label>Exec Manual</label>
    <type>DateTime</type>
</CustomField>