force-app/main/default/objects/Log_CTI_Valdo__c/fields/ID_Valdo__c.field-meta.xml
<CustomField>
    <fullName>ID_Valdo__c</fullName>
    <externalId>true</externalId>
    <label>ID Valdo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>