force-app/main/default/objects/Log_CTI_Valdo__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <defaultValue>&apos;API Call In&apos;</defaultValue>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API Call In</fullName>
            </value>
            <value>
                <fullName>API Call Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>