force-app/main/default/objects/Log_CTI_Valdo__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 1, &apos;January&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 2, &apos;February&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 3, &apos;March&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 4, &apos;April&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 5, &apos;May&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 6, &apos;June&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 7, &apos;July&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 8, &apos;August&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 9, &apos;September&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 10, &apos;October&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 11, &apos;November&apos;,
IF ( MONTH(DATEVALUE(Start_Dialling__c)) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(DATEVALUE(Start_Dialling__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periode</label>
    <type>Text</type>
</CustomField>