force-app/main/default/objects/Log_CTI_Valdo__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Non Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>