force-app/main/default/objects/Log_CTI_Valdo__c/fields/Previous_Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>Previous_Duration_Time__c</fullName>
    <formula>IF(Related_Call__c!=&apos;&apos;, Related_Call__r.Duration_Dialing_Time__c, &apos;00:00:00&apos;)</formula>
    <label>Previous Duration Time</label>
    <type>Text</type>
</CustomField>