force-app/main/default/objects/Log_CTI_Valdo__c/fields/Recording_File__c.field-meta.xml
<CustomField>
    <fullName>Recording_File__c</fullName>
    <formula>HYPERLINK(  Recording_ID__c  , Recording_ID__c)</formula>
    <label>Recording File</label>
    <type>Text</type>
</CustomField>