force-app/main/default/objects/Log_CTI_Valdo__c/fields/Recording_ID__c.field-meta.xml
<CustomField>
    <fullName>Recording_ID__c</fullName>
    <externalId>true</externalId>
    <label>Recording ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>