force-app/main/default/objects/Log_CTI_Valdo__c/fields/Related_Call__c.field-meta.xml
<CustomField>
    <fullName>Related_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Call</label>
    <referenceTo>Log_CTI_Valdo__c</referenceTo>
    <relationshipLabel>Log CTI Valdo</relationshipLabel>
    <relationshipName>List_Related_Call</relationshipName>
    <type>Lookup</type>
</CustomField>