force-app/main/default/objects/Log_CTI_Valdo__c/fields/Relation_Id__c.field-meta.xml
<CustomField>
    <fullName>Relation_Id__c</fullName>
    <label>Relation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>