force-app/main/default/objects/Log_CTI_Valdo__c/fields/Start_Dialling__c.field-meta.xml
<CustomField>
    <fullName>Start_Dialling__c</fullName>
    <label>Start Dialling</label>
    <type>DateTime</type>
</CustomField>