force-app/main/default/objects/Log_CTI_Valdo__c/fields/Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From__c</fullName>
    <label>Transfer From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>