force-app/main/default/objects/Log_CTI_Valdo__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <label>Transfer To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>