force-app/main/default/objects/Log_CTI_Valdo__c/fields/ValdoDailyData__c.field-meta.xml
<CustomField>
    <fullName>ValdoDailyData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ValdoDailyData</label>
    <type>Checkbox</type>
</CustomField>