force-app/main/default/objects/Log_CTI_Valdo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SIP__c</columns>
    <columns>Status__c</columns>
    <columns>From__c</columns>
    <columns>Recording_File__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>