force-app/main/default/objects/Log_CTI_Valdo__c/listViews/All_Today.listView-meta.xml
<ListView>
    <fullName>All_Today</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Agent__c</columns>
    <columns>SIP__c</columns>
    <columns>Error_API__c</columns>
    <columns>Status__c</columns>
    <columns>From__c</columns>
    <columns>Call_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
    <language>en_US</language>
</ListView>