force-app/main/default/objects/Log_CTI_Valdo__c/listViews/All_Yesterday.listView-meta.xml
<ListView>
    <fullName>All_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>SIP__c</columns>
    <columns>Error_API__c</columns>
    <columns>Status__c</columns>
    <columns>From__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Recording_File__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>All Yesterday</label>
    <language>en_US</language>
</ListView>