force-app/main/default/objects/Log_CTI_Valdo__c/listViews/Check_Outbound_9_Agust_2019.listView-meta.xml
<ListView>
    <fullName>Check_Outbound_9_Agust_2019</fullName>
    <columns>NAME</columns>
    <columns>Start_Calling__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Agent__c</columns>
    <columns>SIP__c</columns>
    <columns>Error_API__c</columns>
    <columns>Status__c</columns>
    <columns>From__c</columns>
    <columns>Call_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Calling__c</field>
        <operation>greaterThan</operation>
        <value>8/8/2019 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Transfer</value>
    </filters>
    <label>Check Outbound - 9 Agust 2019</label>
    <language>en_US</language>
</ListView>