force-app/main/default/objects/Log_CTI_Valdo__c/listViews/Inbound.listView-meta.xml
<ListView>
    <fullName>Inbound</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>Mode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Mode__c</field>
        <operation>equals</operation>
        <value>API Call In</value>
    </filters>
    <label>Inbound</label>
    <language>en_US</language>
</ListView>