force-app/main/default/objects/Log_CTI_Valdo__c/listViews/Inbound_Queue_Log_CTI_Valdo.listView-meta.xml
<ListView>
    <fullName>Inbound_Queue_Log_CTI_Valdo</fullName>
    <filterScope>Queue</filterScope>
    <label>Inbound Queue</label>
    <queue>Inbound_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>