force-app/main/default/objects/Log_CTI_Valdo__c/listViews/Inbound_Today_Dikna.listView-meta.xml
<ListView>
    <fullName>Inbound_Today_Dikna</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>SIP__c</columns>
    <columns>Status__c</columns>
    <columns>ID_Valdo__c</columns>
    <columns>Datetime_Start_Call__c</columns>
    <columns>Recording_File__c</columns>
    <columns>Agent__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Agent__c</field>
        <operation>contains</operation>
        <value>Dikna</value>
    </filters>
    <label>Inbound Today - Dikna</label>
    <language>en_US</language>
</ListView>