force-app/main/default/objects/Log_CTI_Valdo__c/listViews/SIP_701_Log_CTI_Valdo.listView-meta.xml
<ListView>
    <fullName>SIP_701_Log_CTI_Valdo</fullName>
    <filterScope>Queue</filterScope>
    <label>SIP 701</label>
    <queue>SIP_701</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>