force-app/main/default/objects/Log_CTI_Valdo__c/listViews/SIP_702_Log_CTI_Valdo.listView-meta.xml
<ListView>
    <fullName>SIP_702_Log_CTI_Valdo</fullName>
    <filterScope>Queue</filterScope>
    <label>SIP 702 (Taufik Susanto)</label>
    <queue>SIP_702</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>