force-app/main/default/objects/Log_CTI_Valdo__c/listViews/SIP_703_Log_CTI_Valdo.listView-meta.xml
<ListView>
    <fullName>SIP_703_Log_CTI_Valdo</fullName>
    <filterScope>Queue</filterScope>
    <label>SIP 703 (Valdo Admin)</label>
    <queue>SIP_703</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>