force-app/main/default/objects/Log_CTI_Valdo__c/listViews/SIP_800_Log_CTI_Valdo.listView-meta.xml
<ListView>
    <fullName>SIP_800_Log_CTI_Valdo</fullName>
    <filterScope>Queue</filterScope>
    <label>SIP 800</label>
    <queue>SIP_800</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>